--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Steve Francis</h1>
+      <h1>Mine Dogan</h1>
       <p>I'm <span class="typed" data-typed-items="AWS Cloud Practitioner, Solutions Architect, DevOps Engineer"></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Born in Turkey in 1988. Graduated at University of METU, Faculty of Political Education Sciences, Department of Management 2014. After 6 years of public service as a Navy Officer , decided to change career path to IT.</p>
+          <p>Born in Turkey in 1993. Graduated at University of Erciyes Uni, Computer Programming 2013.I am starting my new career IT world.</p>
         </div>
 
         <div class="row">
@@ -709,14 +709,14 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved "Steve Francis"
+        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved "Mine Dogan"
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">Just me, Steve Francis :)</a>
+        Designed by <a href="https://bootstrapmade.com/">Just me, Mine Dogan:)</a>
       </div>
     </div>
   </footer><!-- End Footer -->
