--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Born in Turkey in 1993. Graduated at University of Erciyes Uni, Computer Programming 2013.I am starting my new career IT world.</p>
+          <p>Born in Turkey in 1993. Graduated at University of Erciyes University, Computer Programming 2013.I am starting my new career IT world.</p>
         </div>
 
         <div class="row">
