--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Steve Francis</title>
+  <title>Mine Dogan</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -94,17 +94,17 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>5 Aug 1988</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>sfrancis33.github.io</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 June 1993</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>minedgn.github.io</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+90 542 *** ** **</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ankara, Turkiye</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Tennessee, USA</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>34</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master(ongoing) </span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>sfrancisclarus@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>doganmn25@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -187,7 +187,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">AZURE <i class="val">70%</i></span>
+              <span class="skill">LINUX <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -205,7 +205,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">GIT & GITHUB <i class="val">90%</i></span>
+              <span class="skill">GIT & GITHUB <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
